--- a/src/css/style.css
+++ b/src/css/style.css
@@ -17,6 +17,7 @@ html,body {
 body {
     height: 100%;
     font-family: 'JetBrains Mono', 'Poppins', sans-serif, monospace;
+    background-color:  #F0F8FF;
 }
 
 header {
@@ -68,6 +69,7 @@ ul {
     flex-direction: column;
     padding: 20px;
     width: 100%;
+    text-align: center;
 }
 
 .descricao .titulo {
@@ -93,24 +95,87 @@ ul {
 }
 
 .sobreMim {
-    background-color: aqua;
     padding: 20px;
+    background-color: blueviolet;
+    color: white;
+}
 
-.texto {
-    text-align: justify;
+
+.classeHabilidades {
+    background-color: blueviolet;
+    width: 100%;
+    color: white;
+}
+
+.habilidades {
+    display: flex;
+    justify-content: center;
+}
+
+.habilidades li {
+    margin: 20px;
 }
 
 .atividades {
     background-color: blueviolet;
+    width: 100%;
+    text-align: center;
+    color: white;
 }
 
 .educacao {
-    background-color: blueviolet;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
-.habilidades {
-    background-color: blueviolet;
+#logoAlura {
+    border: 2px solid;
+    padding: 20px;
+}
+
+.projetoMario {
+    width: 40%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 10%;
+}
+
+.experiencia button {
+    height: 20px;
 }
 
 
+.projetoD {
+    width: 40%;
+    margin-left: 50%;
+    margin-top: 20px;
+}
+
+.secaoForm {
+    margin-top: 10%;
+}
+
+.formulario {
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+    margin-left: 30%;
+    margin-top: 50px;
+}
+
+.formulario label {
+    margin-top: 20px;
+}
+
+.rodape {
+    text-align: center;
+    margin-top: 10%;
+    background-color: blueviolet;
+    width: 100%;
+    padding: 20px;
+    color: white;
+}
+
+.rodape a{
+    color: white;
 }
