--- a/src/css/style.css
+++ b/src/css/style.css
@@ -86,12 +86,13 @@ ul {
     display: flex;
     width: 100%;
     background-color: #F0F8FF;
+    align-items: center;
 }
 
 
 .redes {
     margin-left: 15px;
-    padding: 10px;
+    padding: 15px;
 }
 
 .sobreMim {
@@ -100,6 +101,20 @@ ul {
     color: white;
 }
 
+.texto {
+    line-height: 2rem;
+}
+
+.box {
+    display: flex;
+    align-items: center;
+}
+
+.sobreMim img {
+    width: 10%;
+    border-radius: 100px;
+    margin-right: 20px;
+}
 
 .classeHabilidades {
     background-color: blueviolet;
@@ -133,23 +148,30 @@ ul {
     padding: 20px;
 }
 
-.projetoMario {
+.imgMario {
     width: 40%;
     margin-top: 20px;
     margin-bottom: 20px;
     margin-left: 10%;
 }
 
-.experiencia button {
-    height: 20px;
-}
 
-
-.projetoD {
+.imgDecodificador {
     width: 40%;
     margin-left: 50%;
     margin-top: 20px;
 }
+
+.botao {
+    background-color: black;
+    width: 5%;
+    border-radius: 30px;
+    cursor: pointer;
+    font-weight: bold;
+    color: white;
+    padding: 5px;
+}
+
 
 .secaoForm {
     margin-top: 10%;
@@ -161,11 +183,14 @@ ul {
     width: 40%;
     margin-left: 30%;
     margin-top: 50px;
+    border-style: ridge;
+    border-color: rgb(23, 149, 228);
 }
 
 .formulario label {
     margin-top: 20px;
 }
+
 
 .rodape {
     text-align: center;
